<resources>
    <string name="app_name">Smarty Pants</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in">"Signup"</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="myBooks">Mis libros</string>
    <string name= "searchBooks">Buscar Libros</string>
    <string name= "closeSession">Cerrar sesión</string>
    <string name="email_label">Email:</string>
    <string name="username_label">Nombre:</string>
    <string name="nickname_label">Nick:</string>
    <string name="search_book_prompt">title,author...</string>
</resources>
