<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/guideline11"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toEndOf="@id/guideline7"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline12"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toEndOf="@id/guideline7"
        />

    <EditText
        android:id="@+id/nickName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/prompt_nickname"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/guideline13"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toEndOf="@id/guideline7"
      />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/prompt_username"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/guideline14"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toEndOf="@id/guideline7"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:background="#0b9c97"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/guideline15"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toEndOf="@id/guideline7"
        />

    <ImageButton
        android:id="@+id/profilePictureButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintStart_toEndOf="@id/guideline9"/>

    <ImageView
        android:id="@+id/profilePictureTiny"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@id/guideline10"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        app:layout_constraintWidth_percent="0.35" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/nombre_aplicacion"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>


</androidx.constraintlayout.widget.ConstraintLayout>